--- a/login.css
+++ b/login.css
@@ -7,6 +7,25 @@ h1 {
     text-align: center;
 }
 
+.navbar-custom {
+    background-color: #0056b3; 
+    padding: 0.5rem 1rem; 
+  }
+  .navbar-custom .nav-link,
+  .navbar-custom .navbar-brand {
+    color: white; 
+  }
+  .navbar-custom .nav-link:hover {
+    color: #0056b3; 
+  }
+  .btn-custom {
+    background-color: #007bff;
+    color: white;
+  }
+  .btn-custom:hover {
+    background-color: #0056b3; 
+  }
+
 .form {
     text-align: center;
 }
